trunk/Archive2/f3/26a545c70515e1/output
main.cpp:11:5: error: must use a typedef to declare a conversion to 'int *()'
    operator int *()()
    ^
main.cpp:11:5: error: conversion function cannot convert to a function type
main.cpp:13:16: error: cannot initialize return object of type 'int *(*)()' with an lvalue of type 'int (*)(int, int)': different number of parameters (0 vs 2)
        return _foo;
               ^~~~
3 errors generated.
